src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>rC_Giving__Percent_Goal__c</fullName>
        <description>Percentage of Goal Attained for the campaign</description>
        <formula>if( ExpectedRevenue &gt;0, (rC_Giving__Expected_Giving_Amount__c / ExpectedRevenue),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Percentage of Goal Attained for the campaign</inlineHelpText>
        <label>Percent Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Pipeline_Amount_Hierarchy__c</fullName>
        <description>Sum of pipeline giving amount for the campaign hierarchy</description>
        <inlineHelpText>Sum of pipeline giving amount for the campaign hierarchy</inlineHelpText>
        <label>Pipeline Amount - Hierarchy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Pipeline_Amount__c</fullName>
        <description>Sum of pipeline giving amount for the campaign</description>
        <inlineHelpText>Sum of pipeline giving amount for the campaign</inlineHelpText>
        <label>Pipeline Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Pipeline_Bar__c</fullName>
        <description>Formula field providing the percentage of Giving amounts from all open transactions.</description>
        <formula>IMAGE(&apos;/img/samples/color_yellow.gif&apos;, &apos;yellow&apos;, 10, MIN(150, rC_Giving__Pipeline_Ratio__c)) + &apos; &apos; + IF(rC_Giving__Pipeline_Amount__c &lt; 0, &apos;-&apos;, &apos;&apos;) + TEXT(rC_Giving__Pipeline_Ratio__c) + &apos;%&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Percentage of Giving amounts from all open transactions.</inlineHelpText>
        <label>Pipeline Bar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Pipeline_Ratio__c</fullName>
        <description>Formula field providing the percentage of Giving amounts from all open transactions.</description>
        <formula>IF(BLANKVALUE(rC_Giving__Expected_Giving_Amount__c, 0) == 0, 0, ABS(CEILING(100 * BLANKVALUE(rC_Giving__Pipeline_Amount__c, 0) / rC_Giving__Expected_Giving_Amount__c)))</formula>
        <inlineHelpText>Percentage of Giving amounts from all open transactions.</inlineHelpText>
        <label>Pipeline Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rC_Giving__ROI_Hierarchy__c</fullName>
        <description>Uses the expected giving amount from giving of the hierarchy minus the cost from campaigns in the hierarchy and divides the sum by the actual cost from the campaign hierarchy</description>
        <formula>IF( rC_Giving__Is_Parent__c  = True,IF(HierarchyActualCost &gt; 0, (rC_Giving__Expected_Giving_Amount_Hierarchy__c-HierarchyActualCost) /  HierarchyActualCost, null),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Expected giving amount from giving of the hierarchy minus the cost from campaigns in the hierarchy and divides the sum by the actual cost from the campaign hierarchy</inlineHelpText>
        <label>ROI (%) - Hierarchy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rC_Giving__ROI__c</fullName>
        <description>Uses the expected giving amount from giving minus the cost from campaign and divides the sum by the actual cost from the campaign</description>
        <formula>IF(ActualCost &gt; 0, (rC_Giving__Expected_Giving_Amount__c-ActualCost)  /  ActualCost, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Expected giving amount from giving minus the cost from campaign and divides the sum by the actual cost from the campaign</inlineHelpText>
        <label>ROI (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Refunded_Amount_Hierarchy__c</fullName>
        <description>Populated by trigger, provides the sum of refunded giving amounts for the campaign hierarchy.</description>
        <inlineHelpText>Sum of refunded giving amount for the campaign hierarchy.</inlineHelpText>
        <label>Refunded Amount - Hierarchy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Refunded_Amount__c</fullName>
        <description>Populated by trigger, provides the sum of refunded giving amounts for the campaign.</description>
        <inlineHelpText>Sum of refunded giving amount for the campaign.</inlineHelpText>
        <label>Refunded Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Refunded_Bar__c</fullName>
        <description>Formula field providing the percentage of refunded giving amounts associated with this Campaign.</description>
        <formula>IMAGE(&apos;/img/samples/color_red.gif&apos;, &apos;red&apos;, 10, rC_Giving__Refunded_Ratio__c) + &apos; &apos; + IF(rC_Giving__Refunded_Amount__c &lt; 0, &apos;-&apos;, &apos;&apos;) + TEXT(rC_Giving__Refunded_Ratio__c) + &apos;%&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Percentage of refunded giving amounts associated with this campaign.</inlineHelpText>
        <label>Refunded Bar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Refunded_Ratio__c</fullName>
        <description>Formula field providing the percentage of refunded giving amounts associated with this Campaign.</description>
        <formula>IF(BLANKVALUE(rC_Giving__Expected_Giving_Amount__c, 0) == 0, 0, ABS(CEILING(100 * BLANKVALUE(rC_Giving__Refunded_Amount__c, 0) / rC_Giving__Expected_Giving_Amount__c)))</formula>
        <inlineHelpText>Percentage of refunded giving amounts associated with this campaign.</inlineHelpText>
        <label>Refunded Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Remaining_Goal_Hierarchy__c</fullName>
        <description>Formula field providing the expected revenue for the hierarchy of the campaign minus the expected giving amount for the hierarchy of the campaign.</description>
        <formula>if(rC_Giving__Is_Parent__c  = True, HierarchyExpectedRevenue  -  rC_Giving__Expected_Giving_Amount_Hierarchy__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Expected revenue for the hierarchy of the campaign minus the expected giving amount for the hierarchy of the campaign.</inlineHelpText>
        <label>Remaining Goal - Hierarchy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Remaining_Goal__c</fullName>
        <description>Formula Field providing the expected revenue for the campaign minus the expected giving amount.</description>
        <formula>ExpectedRevenue  -  rC_Giving__Expected_Giving_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Expected revenue for the campaign minus the expected giving amount.</inlineHelpText>
        <label>Remaining Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Response_Mechanism__c</fullName>
        <description>Manually populated field indicating how Campaign response is expected to come in.</description>
        <inlineHelpText>How Campaign response is expected to come in.</inlineHelpText>
        <label>Response Mechanism</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Response_Rate_Hierarchy__c</fullName>
        <description>Gives the number of giving records in the hierarchy divided by the total number sent in the hierarchy</description>
        <formula>IF(AND(rC_Giving__Is_Parent__c), IF(HierarchyNumberSent &gt; 0, HierarchyNumberOfOpportunities / HierarchyNumberSent , 1), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>count of gifts in the hierarchy divided by count of campaign members in the hierarchy</inlineHelpText>
        <label>Actual Response (%) - Hierarchy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Response_Rate__c</fullName>
        <description>Gives the number of giving records associated with the campaign divided by the total number sent from the campaign members</description>
        <formula>IF(NumberSent &gt; 0, NumberOfOpportunities /  NumberSent,0)</formula>
        <inlineHelpText>number of giving records divided by the number soliciatations sent</inlineHelpText>
        <label>Actual Response (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Rollup_Giving__c</fullName>
        <description>Automatically populated, displays the most recent giving last modified date and time.</description>
        <inlineHelpText>Displays the most recent giving last modified date and time.</inlineHelpText>
        <label>Rollup Giving</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Segment__c</fullName>
        <description>Contains the last 3 digits of the source code</description>
        <inlineHelpText>last 3 auto-generated digits of the source code</inlineHelpText>
        <label>Segment</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Send_To_Email_Campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this field to sync the campaign and campaign members to Eloqua .</description>
        <inlineHelpText>Check this field to sync the campaign and campaign members to Eloqua .</inlineHelpText>
        <label>Send To Email Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Solicitation_List__c</fullName>
        <description>Used primarily for acquisition, this is the source of the donors solicited for the campaign</description>
        <inlineHelpText>Used primarily for acquisition, this is the source of the donors solicited for the campaign</inlineHelpText>
        <label>Solicitation List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Solicitation_Type__c</fullName>
        <description>Manually populated value reflecting the specific Giving type being solicited.</description>
        <inlineHelpText>Specific Giving type being solicited.</inlineHelpText>
        <label>Solicitation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lapsed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microdonation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Raffle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Source_Code_13_Digits__c</fullName>
        <description>This will store first 13 bit of Campaign Source Code</description>
        <inlineHelpText>This will store first 13 bit of Campaign Source Code</inlineHelpText>
        <label>Source Code 13 Digits</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Source_Code_Partial__c</fullName>
        <description>The auto-calculated first 8 characters of the source code.</description>
        <inlineHelpText>The auto-calculated first 8 characters of the source code.</inlineHelpText>
        <label>Partial Source Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Source_Code__c</fullName>
        <description>Source Code of Campaign as generated by rules defined in the Source Codes configuration.</description>
        <inlineHelpText>Source Code of Campaign as generated by rules defined in the Source Codes configuration.</inlineHelpText>
        <label>Source Code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Start_Date_Time__c</fullName>
        <description>Start Date and Time of Campaign.</description>
        <inlineHelpText>Start Date and Time of Campaign.</inlineHelpText>
        <label>Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Sub_Affiliation__c</fullName>
        <description>Sub-Affiliation this Campaign represents. This value is only used for extending the source code generation rules to support subsections within the same overall Affiliation.</description>
        <inlineHelpText>Sub-Affiliation this Campaign represents. This value is only used for extending the source code generation rules to support subsections within the same overall Affiliation.</inlineHelpText>
        <label>Sub-Affiliation</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Sub_Channel__c</fullName>
        <description>Specific way in which the Channel communication will be carried out.</description>
        <inlineHelpText>Specific way in which the Channel communication will be carried out.</inlineHelpText>
        <label>Sub-Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Support_Designation__c</fullName>
        <description>General designation where pledge or funds are to be applied.</description>
        <inlineHelpText>General designation where pledge or funds are to be applied.</inlineHelpText>
        <label>Support Designation</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Application_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Application form associated with this Job/Shift.</description>
        <inlineHelpText>Application form associated with this Job/Shift.</inlineHelpText>
        <label>Application Form</label>
        <referenceTo>rC_Volunteers__Application_Form__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Application_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, application form would be required and volunteers will be assigned by filling application form for this Job/Shift.</description>
        <inlineHelpText>If checked, application form would be required and volunteers will be assigned by filling application form for this Job/Shift.</inlineHelpText>
        <label>Application Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Assigned_Volunteer_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Indicates the number of Volunteers Assigned.</description>
        <inlineHelpText>Indicates the number of Volunteers Assigned.</inlineHelpText>
        <label>Assigned Volunteer Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Assigned_Volunteer_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Indicates the number of Volunteer Hours Assigned.</description>
        <inlineHelpText>Indicates the number of Volunteer Hours Assigned.</inlineHelpText>
        <label>Assigned Volunteer Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Completed_Volunteer_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Indicates the Count of of Volunteers who completed Volunteering.</description>
        <inlineHelpText>Indicates the Count of of Volunteers who completed Volunteering.</inlineHelpText>
        <label>Completed Volunteer Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Completed_Volunteer_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Indicates the count of of Volunteer Hours completed.</description>
        <inlineHelpText>Indicates the count of of Volunteer Hours completed.</inlineHelpText>
        <label>Completed Volunteer Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Groups__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the Project is available for Group Sign up ?</description>
        <inlineHelpText>Indicates if the Project is available for Group Sign up ?</inlineHelpText>
        <label>Groups?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Hours_Submission_Deadline__c</fullName>
        <description>Deadline datetime for logging hour for this job/shift</description>
        <inlineHelpText>Deadline datetime for logging hour for this job/shift</inlineHelpText>
        <label>Hours Submission Deadline</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Hours_Submission_Grace_Period__c</fullName>
        <description>Grace period in days for hours submission after deadline date is lapsed for current job/shift</description>
        <inlineHelpText>Grace period in days for hours submission after deadline date is lapsed for current job/shift</inlineHelpText>
        <label>Hours Submission Grace Period</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Job_Description__c</fullName>
        <description>Provides the details of the Job related to the project.</description>
        <inlineHelpText>Provides the details of the Job related to the project.</inlineHelpText>
        <label>Job Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Job_End_Date__c</fullName>
        <label>Job End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Job_Start_Date__c</fullName>
        <label>Job Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Match_Age_Range__c</fullName>
        <description>Specify the Age Range required for Volunteering.</description>
        <inlineHelpText>Specify the Age Range required for Volunteering.</inlineHelpText>
        <label>Match Age Range</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Match_Cause_Areas__c</fullName>
        <description>Specify the Cause areas related to the job so that it can be matched against the cause areas of Contacts.</description>
        <inlineHelpText>Specify the Cause areas related to the job so that it can be matched against the cause areas of Contacts.</inlineHelpText>
        <label>Match Cause Areas</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Political Activism</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conservation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refugee Support</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Match_Gender__c</fullName>
        <description>Specify the Gender required for the job.</description>
        <inlineHelpText>Specify the Gender required for the job.</inlineHelpText>
        <label>Match Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Match_Role__c</fullName>
        <description>Reflects the function a Volunteer is expected to perform (Volunteer, Manager, Coordinator, Organizer).</description>
        <inlineHelpText>Reflects the function a Volunteer is expected to perform.</inlineHelpText>
        <label>Match Role</label>
        <picklist>
            <picklistValues>
                <fullName>Presenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Booth Attendant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Floating Information Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outreach Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organizer</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Match_Skills__c</fullName>
        <description>Indicates the abilities or expertise a volunteer should possess.</description>
        <inlineHelpText>Indicates the abilities or expertise a volunteer should possess.</inlineHelpText>
        <label>Match Skills</label>
        <picklist>
            <picklistValues>
                <fullName>Public Speaking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outreach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subject Matter Expert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cratfsman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food Preparation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crowd Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steward</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fee Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Labor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nutritionist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Farming</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Open_Volunteer_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Indicates the count of the number of Volunteers that can be scheduled.</description>
        <inlineHelpText>Indicates the count of the number of Volunteers that can be scheduled.</inlineHelpText>
        <label>Open Volunteer Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Open_Volunteer_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Indicates the count of the number of Volunteers Hours that can be scheduled.</description>
        <inlineHelpText>Indicates the count of the number of Volunteers Hours that can be scheduled.</inlineHelpText>
        <label>Open Volunteer Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Private__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this Job/Shift will not be shown to community users while searching for opportunities to volunteer.</description>
        <inlineHelpText>If checked, this Job/Shift will not be shown to community users while searching for opportunities to volunteer.</inlineHelpText>
        <label>Private?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Project_Description__c</fullName>
        <description>Provides information on  the project description.</description>
        <inlineHelpText>Provides information on  the project description.</inlineHelpText>
        <label>Project Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Project_End_Date__c</fullName>
        <description>Specify the project end date.</description>
        <inlineHelpText>Specify the project end date.</inlineHelpText>
        <label>Project End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Project_Start_Date__c</fullName>
        <description>Specify the project start date.</description>
        <inlineHelpText>Specify the project start date.</inlineHelpText>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Public__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if the Volunteer Project needs to be made available for online signup.</description>
        <inlineHelpText>Check if the Volunteer Project needs to be made available for online signup.</inlineHelpText>
        <label>Public?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Required_Volunteer_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Specify the number of  Volunteers Required.</description>
        <inlineHelpText>Specify the number of  Volunteers Required.</inlineHelpText>
        <label>Required Volunteer Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Required_Volunteer_Hours__c</fullName>
        <description>Specify total number of Volunteering Hours needed on this project.</description>
        <inlineHelpText>Specify total number of Volunteering Hours needed on this project.</inlineHelpText>
        <label>Required Volunteer Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Rollup_Campaigns__c</fullName>
        <description>Internally used in code as a flag.</description>
        <inlineHelpText>Internally used in code as a flag.</inlineHelpText>
        <label>Rollup Campaigns</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Rollup_Members__c</fullName>
        <description>Internally used in code as a flag.</description>
        <inlineHelpText>Internally used in code as a flag.</inlineHelpText>
        <label>Rollup Members</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Rollup_TimeLog__c</fullName>
        <label>Rollup TimeLog</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Shift_Date__c</fullName>
        <description>Specify the date of the shift.</description>
        <inlineHelpText>Specify the date of the shift.</inlineHelpText>
        <label>Shift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Shift_End_Time__c</fullName>
        <description>Specify the Shift End Date/Time.</description>
        <inlineHelpText>Specify the Shift End Date/Time.</inlineHelpText>
        <label>Shift End Time</label>
        <picklist>
            <picklistValues>
                <fullName>5:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:15 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>